--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
 /* main background color */
 
 header, .backColor {background-color: #ffffff;}
+body {font-family: Arial, Helvetica, sans-serif}
+header, h2 {font-family: Georgia, 'Times New Roman', Times, serif}
+
 
 /* banner and rule colors */
 .bannerColor {background-color: #4aaaa5;}
@@ -12,7 +15,26 @@ header, .backColor {background-color: #ffffff;}
 .headerBorderColor {background-color: #cccccc;}
 .contentBorderColor {background-color: #dddddd;}
 
-footer {background-color: #666666};
+#mainSection {
+  background-color: lightskyblue;
+  border-top: 2px solid #777777;
+}
+#contentBackColor {background-color: lightskyblue;}
+
+article {
+  width: 960px;
+  background-color: bisque;
+  margin: auto; 
+}
+
+footer {
+  background-color: #666666;
+  height: 40px;
+  border-top: 5px solid #4aaaa5;
+  text-align: center;
+ /* this is not the right color */ 
+  color: #cccccc;
+};
 
 /* text colors */
 header {color: #4aaaa5;}
@@ -20,14 +42,28 @@ h2 {color: #4aaaa5;}
 .bannerTextColor {color: #ffffff;}
 .mainTextColor {color: #777777;}
 
-/* this is not the right color */
-footer {color: #ffffff;}
-
 /* nav menu */
-ul {list-style-type: none;}
+ul {
+  list-style-type: none;
+ }
+
+li {
+  float: left;
+}
+
 
 /* container ids and classes */
-#name {width: 15%; padding:10px}
+/* i don't like that i have to force font sizing manually
+   to match up with the h2 About me - look for other method */
+#name {
+  font-size:24px;
+  font-weight: 700;
+  margin-left: 150px;
+  width: 20%;
+  padding:20px;
+  text-align: center;
+}
+
 
 
 /* section colors to assist during development */
