--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,11 @@ body, a, p, nav {font-family: Arial, Helvetica, sans-serif;}
 .headerBorderColor {background-color: #cccccc;}
 .contentBorderColor {background-color: #dddddd;}
 
+/* header {
+  border-bottom: 2px solid #cccccc;
+  border-top: none;
+} */
+
 /* nav menu */
 ul {
   float: left;
@@ -44,17 +49,23 @@ a {
 #contentBackColor {background-color: lightskyblue;}
 
 #contentRule {
-  background-color: #777777;
+  background-color: #dddddd;
   height: 2px;
 }
+
 
 article {
   width: 960px;
   padding: 20px;
-  background-color: bisque;
+  background-color: #ffffff;
   margin: auto; 
+  /* margin: 50px, 50px, 50px, 50px;  */
+  border: 2px solid #dddddd;
 }
 
+p {
+  line-height: 1.6;
+}
 #profileImg {
   float: left;
   padding: 20px;
@@ -65,6 +76,7 @@ footer {
   height: 40px;
   border-top: 5px solid #4aaaa5;
   text-align: center;
+  font-size: 9pt;
  /* this is not the right color */ 
   color: #cccccc;
 };
