started Contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ a {
   height: 2px;
 }
 
-#aboutMe {
+#mainSectionTitle {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 24px;
   font-weight: bold;
@@ -92,7 +92,7 @@ a {
   padding-bottom: 20px;
 }
 
-article {
+article, form {
   width: 960px;
   padding: 20px;
   background-color: #ffffff;
