contact form completed - might revisit to add media links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,10 @@
 /* section classes  */
 header {background-color: #ffffff;}
 header, h2 {font-family: Georgia, 'Times New Roman', Times, serif;}
-body, a, p, nav {font-family: Arial, Helvetica, sans-serif;}
+body, a, p, nav, form, input, textarea {font-family: Arial, Helvetica, sans-serif;}
+
+form, input {color: #777777;
+}
 
 body {
   margin: 0;
@@ -92,7 +95,7 @@ a {
   padding-bottom: 20px;
 }
 
-article, form {
+.mainDiv {
   width: 960px;
   padding: 20px;
   background-color: #ffffff;
@@ -113,6 +116,52 @@ p {
   width: 168px;
   height: 174px;
   padding: 5px 20px 20px 0px;
+}
+
+form {
+  padding-top: 20px;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 6px 0;
+  display: inline-block;
+  border: 1px solid #dddddd;
+  box-sizing: border-box;
+  font-size: 10pt;
+}
+
+ input:focus, textarea:focus {
+   outline: none !important;
+   border-color:1px solid #18847e;
+   box-shadow: 0 0 5px #4aaaa5;
+  }
+
+textarea {
+  width: 100%;
+  height: 120px;
+  padding: 12px 20px;
+  margin: 6px 0;
+  display: inline-block;
+  border: 1px solid #dddddd;
+  box-sizing: border-box;
+  font-size: 10pt;
+  color: #777777;
+  resize: none;
+}
+
+input[type=submit] {
+  background-color: #4aaaa5;
+  color: #ffffff;
+  padding: 10px 24px;
+  border: none;
+  cursor: pointer;
+  font-size: 12pt;
+}
+
+input[type=submit]:hover {
+  background-color: #18847e;
 }
 
 footer {
