--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,8 @@ li {
   padding-right: 0px;
 }
 
+
+
 a {
   text-decoration: none;
 }
@@ -86,8 +88,7 @@ a {
 #mainSection {
   clear: both;
   overflow: auto;
-  height: 600px;
-  /* background-image: url(../images/paper_2.png); */
+  height: 740px;
   background-image: url(../images/brickwall.png);
   margin-top: 72px;
  }
@@ -122,14 +123,25 @@ a {
   box-sizing: border-box;
 }
 
+/* new try to get correct solution
+   use float and clearfix */
+
+   .clearfix:after {
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+  }
+
 /* struggling with trying to find right solution
    for Portfolio container - currently hard-wiring
    the image positions and forcing the outer container
    height */
-#mainDivPosition {
+/* #mainDivPosition {
   position: relative;
   height: 550px;
-}
+} */
 
 p {
   line-height: 1.6;
@@ -144,30 +156,23 @@ p {
 }
 
 
-.box {
+/* .box {
   position: absolute;
   width: 250px;
   height: 187px;
   background: #2db34a;
   border: 2px solid black;
   margin: 30px 0px 0px 30px;
-}
+} */
 
 /* .portContainer {
   position: relative;
 } */
 
-.imageText {
-  position: relative;
-  bottom: 70px;
-  left: 30px;
-  width: 250px;
-  background-color: #4aaaa5;
-  color: #ffffff;
-  font-size: 14pt;
-  box-sizing: border-box;
-  padding: 20px;
-  text-align: center;
+
+
+.portfolioBox {
+  float: left;
 }
 
 .portImg {
@@ -177,7 +182,24 @@ p {
   margin: 30px 0px 0px 30px;
 }
 
-.box1 {
+.imageText {
+  position: relative;
+  bottom: 70px;
+  left: 31px;
+  width: 250px;
+  background-color: #4aaaa5;
+  color: #ffffff;
+  font-size: 14pt;
+  box-sizing: border-box;
+  padding: 20px;
+  text-align: center;
+}
+
+.portBoxIsActive:hover {
+  opacity: .5;
+}
+
+/* .box1 {
   position: absolute;
   left: 0px;
 }
@@ -208,7 +230,7 @@ p {
   position: absolute;
   top: 300px;
   left: 580px;
-}
+} */
 
 form {
   padding-top: 20px;
