minor fixes after code validation and also adding comments and to-do next steps for code review

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,18 @@
-/* Portfolio - main style sheet */
+/* About me site style sheet */
+/* ToDo: should go thru whole style sheet and look for unused ids/classes */
+/* ToDo: review html pages and look for better solution on the main content container 
+         instead of using a fixed height - need to have it grow with added content. */
 
-/* section classes  */
+/* tag classes  */
 header .imageText {background-color: #ffffff;}
 header, h2 {font-family: Georgia, 'Times New Roman', Times, serif;}
+
+/* text colors */
+header {color: #4aaaa5;}
+h2 {color: #4aaaa5;}
+.mainTextColor {color: #777777;}
+
+/* ToDo: error in line below - fix-refactor and test to see if any issues arise */
 body, a, p, nav, form, input, textarea, {font-family: Arial, Helvetica, sans-serif;}
 
 form, input {color: #777777;
@@ -14,7 +24,7 @@ body {
   width: 100%;
 }
 
-/* Header Outer & Inner containers */
+/* Header */
 header {
   border-bottom: 2px solid #777777;
   width: 100%;
@@ -24,12 +34,13 @@ header {
  
  } 
 
+ /* Container used in Header */
 #topDiv {
-  /* background-color: red; */
   height: 70px;
   background-color: #ffffff;
 }
 
+/* Container child of #topDiv container in Header */
 #innerTopDiv {
   width: 960px;
   height: 70px;
@@ -37,7 +48,7 @@ header {
   margin-right: auto;
 }
 
-/* Header Name Logo ids and classes */
+/* Header - my name */
    #name {
     float: left;
     box-sizing: border-box;
@@ -51,7 +62,7 @@ header {
     padding: 20px;
   }
 
-/* nav menu */
+/* nav menu - unordered list*/
 ul {
   float: right;
   list-style-type: none;
@@ -59,6 +70,7 @@ ul {
   height: 100%; 
  }
 
+ /* nav menu - list items */
 li {
   float: left;
   display: block;
@@ -69,22 +81,25 @@ li {
   padding-right: 0px;
 }
 
-
-
+/* nav menu - links */
 a {
   text-decoration: none;
 }
 
+/* nav menu - social icon container */
 .socialNav {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+/* nav menu - social icon image */
 .socialIcon {
   width: 30px;
   height: 30px;
   
 }
 
+/* main body below header */
 #mainSection {
   clear: both;
   overflow: auto;
@@ -93,17 +108,13 @@ a {
   margin-top: 72px;
  }
 
+ /* rule line  */
 #contentRule {
   background-color: #dddddd;
   height: 2px;
 }
 
-/* #portfolioRule {
-  background-color: #dddddd;
-  height: 2px;  
-  margin-bottom: 10px;
-} */
-
+/* title for each page's main section */
 #mainSectionTitle {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 24px;
@@ -112,6 +123,7 @@ a {
   padding-bottom: 20px;
 }
 
+/* inner content container */
 .mainDiv {
   width: 960px;
   padding: 30px;
@@ -123,9 +135,8 @@ a {
   box-sizing: border-box;
 }
 
-/* new try to get correct solution
-   use float and clearfix */
-
+/* used on porfolio page inner content container */
+/* refactored code to use float in portfolio and clearfix */
    .clearfix:after {
     content: ".";
     visibility: hidden;
@@ -134,20 +145,12 @@ a {
     clear: both;
   }
 
-/* struggling with trying to find right solution
-   for Portfolio container - currently hard-wiring
-   the image positions and forcing the outer container
-   height */
-/* #mainDivPosition {
-  position: relative;
-  height: 550px;
-} */
-
 p {
   line-height: 1.6;
   padding-top: 20px;
 }
 
+/* about me profile image */
 #profileImg {
   float: left;
   width: 168px;
@@ -155,26 +158,12 @@ p {
   padding: 5px 20px 20px 0px;
 }
 
-
-/* .box {
-  position: absolute;
-  width: 250px;
-  height: 187px;
-  background: #2db34a;
-  border: 2px solid black;
-  margin: 30px 0px 0px 30px;
-} */
-
-/* .portContainer {
-  position: relative;
-} */
-
-
-
+/* container for portfolio project */
 .portfolioBox {
   float: left;
 }
 
+/* portfolio project image */
 .portImg {
   width: 250px;
   height: 187px;
@@ -182,6 +171,7 @@ p {
   margin: 30px 0px 0px 30px;
 }
 
+/* portfolio project image caption */
 .imageText {
   position: relative;
   bottom: 70px;
@@ -195,47 +185,17 @@ p {
   text-align: center;
 }
 
+/* used for portfolio projects that are active and have been linked to */
 .portBoxIsActive:hover {
   opacity: .5;
 }
 
-/* .box1 {
-  position: absolute;
-  left: 0px;
-}
-
-.box2 {
-  position: absolute;
-  left: 290px;
-}
-
-.box3 {
-  position: absolute;
-  left: 580px;
-}
-
-.box4 {
-  position: absolute;
-  top: 300px;
-  left: 0px;
-}
-
-.box5 {
-  position: absolute;
-  top: 300px;
-  left: 290px;
-}
-
-.box6 {
-  position: absolute;
-  top: 300px;
-  left: 580px;
-} */
-
+/* contact me form container */
 form {
   padding-top: 20px;
 }
 
+/* contact me form text input field */
 input[type=text] {
   width: 100%;
   padding: 12px 20px;
@@ -246,12 +206,14 @@ input[type=text] {
   font-size: 10pt;
 }
 
+/* contact me form input field highlighting when active */
  input:focus, textarea:focus {
    outline: none !important;
    border-color:1px solid #18847e;
    box-shadow: 0 0 5px #4aaaa5;
   }
 
+ /* contact me form message box */
 textarea {
   width: 100%;
   height: 120px;
@@ -265,6 +227,7 @@ textarea {
   resize: none;
 }
 
+/* contact me submit button */
 input[type=submit] {
   background-color: #4aaaa5;
   color: #ffffff;
@@ -274,10 +237,12 @@ input[type=submit] {
   font-size: 12pt;
 }
 
+/* contact me submit button hover */
 input[type=submit]:hover {
   background-color: #18847e;
 }
 
+/* footer container */
 footer {
   background-color: #666666;
   position: relative;
@@ -288,10 +253,10 @@ footer {
   color: #cccccc;
 }
 
-/* absolute position the Copyright up from bottom
-   center the Copyright within footer horizontally
-   using the transform 
-   Do same for icon attribution
+
+/* copyright container */
+/* absolute position the Copyright up from bottom center the Copyright within footer horizontally
+   using the transform. Do same for icon attribution
 */
 #copyRight {
   position: absolute;
@@ -300,6 +265,7 @@ footer {
   transform: translate(-50%);
   }
 
+/* container for the icon usage attribution */
 #iconCredit {
   position: absolute;
   bottom: 4px;
@@ -308,8 +274,5 @@ footer {
   font-size: 8px;
   }
 
-/* text colors */
-header {color: #4aaaa5;}
-h2 {color: #4aaaa5;}
-.mainTextColor {color: #777777;}
+
 
