--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,9 @@ a {
   }
 
 p {
-  line-height: 1.6;
+  line-height: 1.8;
   padding-top: 20px;
+  font-size: 14pt;
 }
 
 /* about me profile image */
